--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
       dockerfile: Dockerfile
     image: 4gewinnt:latest
     container_name: 4gewinnt
-    stdin_open: true    # keep STDIN open for interactive input
-    tty: true           # allocate a pseudo-TTY so input/output works in terminal
     restart: "no"
+    ports:
+      - "5000:5000"
